Obfuscate the email addy's a bit.

--- a/Authors
+++ b/Authors
@@ -1,3 +1,3 @@
-Mike McLean <mikem@redhat.com>
-Dennis Gregorovic <dgregor@redhat.com>
-Mike Bonnet <mikeb@redhat.com>
+Mike McLean <mikem at redhat dot com>
+Dennis Gregorovic <dgregor at redhat dot com>
+Mike Bonnet <mikeb at redhat dot com>
