Adding myself to the authors file

--- a/Authors
+++ b/Authors
@@ -1,3 +1,4 @@
 Mike McLean <mikem at redhat dot com>
 Dennis Gregorovic <dgregor at redhat dot com>
 Mike Bonnet <mikeb at redhat dot com>
+Jesse Keating <jkeating at redhat dot com>
